# RASPA_gauge_cell

./: README.md
examples/1_IRMOF-1/: README
examples/1_IRMOF-1/Master/: bsub.job  force_field_mixing_rules.def
examples/2_ZIF-412/Master/: GaugeCell_output_isotherm_reader.py  bsub.job  indexed_1_charged_oxstate.cif  simulation.input
examples/3_IRMOF-74-V/Master/: bsub.job  simulation.input
examples/5_IRMOF-74-IX/Master/: GaugeCell_output_isotherm_reader.py
examples/6_MCM-41/Master/: Dcc_53.948_vmd.cif  ar.err  bsub.job  output_isotherm_reader.py  pseudo_atoms.def  simulation.input
examples/6_MCM-41/Master/VTK/System_0/: Frame.vtk  (+2 more)
examples/8_UiO-66/Master/: force_field_mixing_rules.def
examples/Advanced/Adsorption_of_CO2_in_Flexible_IRMOF-1_Osmotic/: simulation.input
examples/Non-Basic/MinimizationIRMOF-1-NVT/: simulation.input
examples/RASPA_input_files/1_IRMOF-1/: simulation.input
examples/RASPA_input_files/2_ZIF-412/: force_field_mixing_rules.def
examples/RASPA_input_files/3_IRMOF-74-V/: IRMOF-74-V_with_REPEAT_charges.cif
examples/RASPA_input_files/4_IRMOF-74-VII/: IRMOF-74-VII_primitive_vesta_removed_water.cif  pseudo_atoms.def  simulation.input
examples/RASPA_input_files/5_IRMOF-74-IX/: IRMOF-74-IX_primitive_vesta.cif  force_field_mixing_rules.def  simulation.input
examples/RASPA_input_files/6_MCM-41/: force_field_mixing_rules.def
examples/RASPA_input_files/7_Cu-BTC/: simulation.input
examples/RASPA_input_files/8_UiO-66/: simulation.input
examples/Simulation_Example_IRMOF-74-V_1_uc/: 0_calculate_gaugecell_size.py  1_extract_MCEMC_from_RASPA_histograms.py  2_calculate_true_grand_canonical_isotherm.py  3_calculate_energy_barriers.py  4_plot_isotherm_energy_barrier_work_function.py
examples/Simulation_Example_IRMOF-74-V_1_uc/N_121/: ar.out  bsub.job  simulation.input
examples/Simulation_Example_IRMOF-74-V_1_uc/N_146/: bsub.job  simulation.input
examples/Simulation_Example_IRMOF-74-V_1_uc/N_171/: bsub.job  simulation.input
examples/Simulation_Example_IRMOF-74-V_1_uc/N_196/: bsub.job  simulation.input
examples/Simulation_Example_IRMOF-74-V_1_uc/N_221/: bsub.job  simulation.input
examples/Simulation_Example_IRMOF-74-V_1_uc/N_246/: ar.err  bsub.job  simulation.input
src_gauge_cell/: CMakeLists.txt  README.md  framework.c  gauge_cell.c  gauge_cell.h  input.c  input.h  mc_moves.c  mc_moves.h  mc_moves_tmmc.c  molecule.c  molecule.h  monte_carlo.c  output.c  potentials.c  potentials.h  sample.c  sample.h  simulation.c  simulation.h  statistics.c  status.c
(+464 files in other folders)
